# Sapientia

./: .dockerignore  .gitignore  CLAUDE.md  README.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .env.example  package.json  pyproject.toml  ruff.toml  tsconfig.json  vitest.config.ts
apps/api/scripts/: audit-concept-embeddings.ts  audit-concept-salience.ts  audit-paper-compile.ts  audit-reader-annotations.ts  audit-workspace-concept-cluster-candidates.ts  backfill-blocks.ts  backfill-concept-descriptions.ts  backfill-concept-embeddings.ts  backfill-concept-salience.ts  backfill-paper-compile.ts  backfill-workspace-concept-cluster-candidates.ts  backfill-workspace-concept-clusters.ts  check-pdf-dims.ts  inspect-mineru-zip.ts  judge-workspace-semantic-candidates.ts  normalize-block-bboxes.ts  requeue-pending.ts
apps/api/src/: auth.ts  config.py  config.ts  db.ts  index.ts  logger.ts  main.py  worker.ts
apps/api/src/middleware/: auth.ts  workspace.ts
apps/api/src/queues/: connection.ts  note-concept-extract.ts  note-concept-heartbeat.ts  paper-concept-description.ts  paper-concept-refine.ts  paper-enrich.ts  paper-inner-graph-compile.ts  paper-metadata-retry.ts  paper-parse.ts  paper-summarize.ts  workspace-semantic-refresh.ts
apps/api/test/: auth.test.ts  block-parser.test.ts  citations.test.ts  config.test.ts  crypto.test.ts  health.test.ts  mineru-client.test.ts  mineru-zip.test.ts  notes.test.ts  paper-parse.worker.test.ts  papers.test.ts  queue.test.ts  reader-annotations.test.ts  s3-client.test.ts  workspaces.test.ts
(+275 files in other folders)
